--- a/ICDAMT2022.ipynb
+++ b/ICDAMT2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +90,7 @@
     "            prob *= A[prev_state][curr_state]\n",
     "            prev_state = curr_state\n",
     "        return prob\n",
+    "    \n",
     "\n",
     "    \n",
     "np.random.seed(0)\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,6 @@
     "#print(frmr_day_vl)\n",
     "arr_frmr_day_vl = np.array(frmr_day_vl)\n",
     "sum_alldays = arr_frmr_day_vl.sum(axis=0)\n",
-    "#print(sum_alldays)\n",
     "\n",
     "#print(np.arange(sum_alldays.size))\n",
     "plt.bar(np.arange(sum_alldays.size), sum_alldays)\n",
@@ -148,28 +148,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array( [  # Clary cloudy rainy\n",
+    "                [0.50, 0.30, 0.20], \n",
+    "                [0.10, 0.45, 0.45], \n",
+    "                [0.45, 0.10, 0.45]\n",
+    "                        ] )\n",
+    "B = np.array( [   # Sun ligth prob \n",
+    "                [0.80, 0.20], \n",
+    "                [0.50, 0.50], \n",
+    "                [0.05, 0.95]\n",
+    "                        ] )\n",
+    "m  = MarkovChain()\n",
+    "pi_normalized = m.Eigen_Vectors()\n",
+    "#print(pi_normalized)\n",
+    "prob = m.find_prob([1, 2, 2, 0], A, pi_normalized)\n",
+    "#print(prob)\n",
+    "#print(m.find_prob([1, 2, 2, 0], A, pi_normalized))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ForwardAlgorithm:\n",
+    "    def __init__(self):\n",
+    "        self.prob = 0.0\n",
+    "    def DynamicProgram(self, prbA, MkA, ObA, PiA, demands):\n",
+    "        for t in range(len(demands)):\n",
+    "            for i in range(len(MkA)):\n",
+    "                if t == 0 :\n",
+    "                    #print(\"PiA : \" + str(PiA[i]) + \" , ObA[i,demands[j]] : \" + str(ObA[i,demands[j]]))\n",
+    "                    prbA[i,t] =  PiA[i] * ObA[i,demands[t]] \n",
+    "                else:\n",
+    "                    sumi = 0.0\n",
+    "                    for j in range(len(MkA)):\n",
+    "                        #print(\"prbA[j,t-1] : \" + str(prbA[j,t-1]) + \" , MkA[j,i] : \" + str(MkA[j,i]) + \" , ObA[i,demands[j] : \" + str(ObA[i,demands[t]]) )\n",
+    "                        sumi +=    prbA[j,t-1] *  MkA[j,i] *   ObA[i,demands[t]]  \n",
+    "                    prbA[i,t] = sumi\n",
+    "        return prbA  #prb.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A = np.array( [  # Clary cloudy rainy\n",
+    "#                [0.50, 0.50], \n",
+    "#                [0.30, 0.70] \n",
+    "#                        ] )\n",
+    "#B = np.array( [   # Sun ligth prob \n",
+    "#                [0.80, 0.20], \n",
+    "#                [0.40, 0.60]\n",
+    "#                        ] )\n",
+    "#pi_normalized = np.array( [0.375, 0.625])\n",
+    "demands = np.array([0, 0])\n",
+    "N = len(demands) # N days to sunlight\n",
+    "FA  = ForwardAlgorithm()\n",
+    "dm = (len(A), len(demands))  # create a dimentional array\n",
+    "HMC = FA.DynamicProgram(np.zeros(dm),A,B,pi_normalized,demands)\n",
+    "prob = HMC.sum(axis=0)[len(demands)-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.024520909090909072\n"
+      "Day 0 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 1 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 2 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 3 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 4 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 5 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 6 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 7 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 8 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 9 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 10 \t Org Wl 13.0 \t WL 13.0 \t Cost  1300.0\n",
+      "Day 11 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 12 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 13 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 14 \t Org Wl 24.32 \t WL 24.32 \n",
+      "\t>>HMM Process :  Over Cap 10.32 Prob of sun ligth : 21.96% \t Cost  1400\n",
+      "\n",
+      "Day 15 \t Org Wl 0.0 \t WL 10.32 \t Cost  1032.0\n",
+      "Day 16 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 17 \t Org Wl 25.8 \t WL 25.8 \n",
+      "\t>>HMM Process :  Over Cap 11.8 Prob of sun ligth : 23.24% \t Cost  1400\n",
+      "\n",
+      "Day 18 \t Org Wl 0.0 \t WL 11.8 \t Cost  1180.0\n",
+      "Day 19 \t Org Wl 30.76 \t WL 30.76 \n",
+      "\t>>HMM Process :  Over Cap 16.76 Prob of sun ligth : 21.96% \t Cost  1400\n",
+      "\t Cost  1400\n",
+      "\n",
+      "Day 20 \t Org Wl 0.0 \t WL 14.0 \t Cost  1400.0\n",
+      "Day 21 \t Org Wl 0.0 \t WL 2.76 \t Cost  276.0\n",
+      "Day 22 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 23 \t Org Wl 12.43 \t WL 12.43 \t Cost  1243.0\n",
+      "Day 24 \t Org Wl 13.33 \t WL 13.33 \t Cost  1333.0\n",
+      "Day 25 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 26 \t Org Wl 12.37 \t WL 12.37 \t Cost  1237.0\n",
+      "Day 27 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 28 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n",
+      "Day 29 \t Org Wl 0.0 \t WL 0.0 \t Cost  0.0\n"
      ]
     }
    ],
    "source": [
-    "A = np.array( [\n",
-    "                [0.50, 0.30, 0.20], \n",
-    "                [0.10, 0.45, 0.45], \n",
-    "                [0.45, 0.10, 0.45]\n",
-    "                        ] )\n",
-    "m  = MarkovChain()\n",
-    "pi_normalized = m.Eigen_Vectors()\n",
-    "prob = m.find_prob([1, 2, 2, 0], A, pi_normalized)\n",
-    "print(prob)\n",
-    "#print(m.find_prob([1, 2, 2, 0], A, pi_normalized))"
+    "mCap = 14  # ton per day\n",
+    "nCap = 20  # day\n",
+    "mPrc  = 100 # Cost  machine per ton\n",
+    "nPrc  = 50 # Cost neutral per ton\n",
+    "orgwk = arr_frmr_day_vl.sum(axis=0)\n",
+    "sum_alldays = arr_frmr_day_vl.sum(axis=0)\n",
+    "#np.random.seed(0)\n",
+    "#print(sum_alldays)\n",
+    "for day in range(len(sum_alldays)):\n",
+    "    print(\"Day \" + str(day)  + \" \\t Org Wl \" + str(round(orgwk[day],2)) + \" \\t WL \" +  str(round(sum_alldays[day],2)),  end=\" \")\n",
+    "    if (sum_alldays[day] > mCap):\n",
+    "        print(\"\\n\\t>>HMM Process : \" , end=\" \")\n",
+    "        WeatherDay = np.random.choice([0,1], p=[0.65,0.35])\n",
+    "        OvCap = sum_alldays[day] - mCap\n",
+    "        print(\"Over Cap \" + str(round(OvCap,2)) , end=\" \")\n",
+    "        # ---- HMC ---------\n",
+    "        nDay_light = np.concatenate( ([WeatherDay],np.zeros(int(OvCap/nCap)+1, int)))\n",
+    "        dm = (len(A), len(nDay_light))\n",
+    "        HMC = FA.DynamicProgram(np.zeros(dm),A,B,pi_normalized,nDay_light)\n",
+    "        prob = HMC.sum(axis=0)[len(nDay_light)-1]\n",
+    "        print(\"Prob of sun ligth : \" + str(round(prob*100,2)) + \"%\", end=\" \")\n",
+    "        # ---- HMC --------\n",
+    "        nxDay = 0\n",
+    "        while OvCap > 0 :\n",
+    "            nxDay += 1\n",
+    "            #print(\"\")\n",
+    "            #print(OvCap , sum_alldays[day+nxDay] , day+nxDay)\n",
+    "            if (sum_alldays[day+nxDay] + OvCap) > mCap :\n",
+    "                OvCap = sum_alldays[day+nxDay] + OvCap - mCap\n",
+    "                sum_alldays[day+nxDay] = mCap\n",
+    "            else:\n",
+    "                sum_alldays[day+nxDay] += OvCap\n",
+    "                OvCap = 0\n",
+    "            print(\"\\t Cost  \" + str(mPrc*mCap))\n",
+    "        print(\"\")\n",
+    "    else:\n",
+    "        print(\"\\t Cost  \" + str(round(mPrc*sum_alldays[day],2)))\n"
    ]
   }
  ],
